# stm32_composite_usb_test

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  demoDevice.xdd
cep/: can_manager.cpp  can_manager.h  main.cpp  memory.cpp
cep/can_open/: CO_app_STM32.cpp  CO_app_STM32.h  CO_driver_STM32.cpp  CO_driver_target.h  CO_storageBlank.h  OD.c  OD.h
cep/cli/: cli.cpp  cli.h
cep/cli/built-ins/: built-ins.h  runtime_stats.cpp  runtime_stats.h  tasks.cpp  tasks.h
cep/slcan/: slcan.cpp  slcan.h
cep/slcan/enums/: auto_retransmit.h  bitrates.h  commands.h  modes.h
g473/: .cproject  .mxproject  CMakeLists.txt  STM32G473QETX_FLASH.ld  STM32G473QETX_RAM.ld  st_nucleo_g4.cfg  usb_test.ioc
g473/Core/Inc/: FreeRTOSConfig.h  adc.h  main.h  opamp.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tim.h
g473/Core/Src/: adc.c  app_freertos.c  dac.c  fdcan.c  gpio.c  main.c  opamp.c  spi.c  stm32g4xx_it.c  sysmem.c  tim.c  usart.c
g473/Core/Startup/: startup_stm32g473qetx.s
g473/Drivers/STM32G4xx_HAL_Driver/Inc/: stm32g4xx_hal_fdcan.h
g473/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc/: usbd_cdc.h
g473/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
g473/USB_Device/App/: usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
usb_composite/: readme.md
usb_composite/app/: usb_device.c  usbd_cdc_if.cpp  usbd_cdc_if.h  usbd_desc.c
usb_composite/class/cdc/src/: usbd_cdc.c
usb_composite/core/inc/: usbd_def.h
usb_composite/core/src/: usbd_core.c
usb_composite/middlewares/st/class/dcdc/inc/: usbd_dcdc.h
usb_composite/middlewares/st/class/dcdc/src/: usbd_dcdc.c
